# templates

templates/bazel_cc/: .bazelrc  .clang-format  .clang-tidy  .gitignore  .lldbinit  BUILD.bazel  MODULE.bazel
templates/bazel_cc/tools/lldb/: lldbinit.py
templates/bazel_cc/{{template.project_name}}/: BUILD.bazel  deps.bzl  platforms.bzl
templates/bazel_cc/{{template.project_name}}/tools/: BUILD.bazel  hello_world.cc
tools/: create.sh
